<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_third"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ovi"
    tools:context="com.example.ovi.messmanagingcalculator.Third"
    android:orientation="vertical">

    <EditText
        android:id="@+id/depositBalance"
        android:inputType="numberDecimal"
        style="@style/Design"
        android:hint="@string/deposit"
        />
    <EditText
        android:id="@+id/fullMealNumber"
        android:inputType="number"
        android:hint="@string/fullMealNum"
        style="@style/Design"/>
    <EditText
        android:id="@+id/dayMealNumber"
        android:inputType="number"
        android:hint="@string/dayMealNumber"
        style="@style/Design"/>
    <EditText
        android:id="@+id/nightMealNumber"
        style="@style/Design"
        android:inputType="number"
        android:hint="@string/NightMealnum"/>
    <EditText
        android:id="@+id/feastMealCost"
        style="@style/Design"
        android:inputType="numberDecimal"
        android:hint="@string/feastMealCost"/>
    <EditText
        android:id="@+id/snacksBill"
        style="@style/Design"
        android:inputType="numberDecimal"
        android:hint="@string/snacksBill"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculateBtn"
            android:text="@string/calculate"
            android:layout_marginBottom="5dp"
            android:background="@drawable/transparent"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearBtn"
            android:text="@string/clear"
            android:layout_marginBottom="5dp"
            android:background="@drawable/transparent"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="17dp"
            android:layout_marginEnd="17dp"
            android:textStyle="bold"/>

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultView"
        android:layout_weight="1"
        android:text="@string/result"
        android:gravity="center"
        android:background="@drawable/transparent"
        android:textColor="@color/white"
        android:textStyle="bold"/>


</LinearLayout>
