<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAccent"
    tools:context="com.example.ovi.messmanagingcalculator.Second">

    <EditText
        android:id="@+id/totalMeal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:hint="@string/totalMeal"
        android:background="@color/green"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/totalFuel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:hint="@string/totalFuel"
        android:background="@color/yellow"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/extraCharge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:hint="@string/extraCharge"
        android:background="@color/green"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/cooker_PaperBill"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:hint="@string/cooker_Paper"
        android:background="@color/yellow"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/fullMealRate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:hint="@string/fullMealRate"
        android:background="@color/green"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/DayMealRate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:hint="@string/DayMealRate"
        android:background="@color/yellow"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/NightMealRate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:hint="@string/NightMealRate"
        android:background="@color/green"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="118dp"
            android:layout_marginStart="118dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"/>
    </RelativeLayout>


</LinearLayout>
